force-app/main/default/objects/Error_Log__c/fields/Log_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Log_Date_Time__c</fullName>
    <description>This is a date time field which contain the detail of date and time when error occured</description>
    <inlineHelpText>Date and time when error occured.</inlineHelpText>
    <label>Log Date/Time</label>
    <type>DateTime</type>
</CustomField>