force-app/main/default/objects/Error_Log__c/fields/Log_Details__c.field-meta.xml
<CustomField>
    <fullName>Log_Details__c</fullName>
    <description>This is a text area long field which stores the Complete Stack Track about the Problem</description>
    <inlineHelpText>Stores the Complete Stack Track about the Problem</inlineHelpText>
    <label>Log Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>