force-app/main/default/objects/Error_Log__c/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <description>This is a text field which store the Name of Either Apex Class or Apex Trigger</description>
    <inlineHelpText>Store The Name of Either Apex Class or Apex Trigger</inlineHelpText>
    <label>Process Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>